test/chpldoc/errors/badComment.doc.chpl
/*
chpldoc comment
*/
proc bar() {
  writeln("This is procedure bar()");
}

bar();

