test/chpldoc/errors/badComment.doc.good
badComment.doc.chpl:1: error: badly formatted 'chpldoc' string
